# PyLibraryTemplate

./: README.md  main.py  pyproject.toml
scripts/: build.py  init.py
tests/: test_sample.py
