[project]
name = "pylibrarytemplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[dependency-groups]
dev = ["pytest>=9.0.2", "radon>=6.0.1", "ruff>=0.15.4"]
